--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import Footer from '../components/Footer.astro';
   <Navigation />
   <main>
     <Hero />
-    <ProblemStatement />
+    <!-- <ProblemStatement /> -->
     <Features />
     <HowItWorks />
     <ComparisonTable />
